# flowbased

./: app.py  pyproject.toml
datasets/CoreSGMv8/: SGMweb.html  substation_locations_exact.csv  v8_Lines.parquet  v8_Tielines.parquet  v8_Transformers.parquet  ~$CoreSGMv8.xlsx
