[project]
name = "coresgm-grid-map"
version = "0.1.0"
description = "Grid Congestion Tool"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "polars",
    "pandas",
    "plotly",
    "jao-py",
    "pyarrow",
]
[tool.poetry]
name = "coresgm-grid-map"
version = "0.1.0"

packages = [
    { include = "flowbasedmap" } # Or whatever your source folder is named
]